--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   carousel_slider: ^4.0.0
   provider: ^6.0.1
   http: ^0.13.3
+  cloud_firestore: ^3.1.8
+  firebase_core: ^1.12.0
+
 
 dev_dependencies:
   flutter_test:
